Home: footer cut off fix

--- a/client/landing/site.landing/styl/home.styl
+++ b/client/landing/site.landing/styl/home.styl
@@ -9,10 +9,12 @@ home.styl
 
 body.home
   -webkit-font-smoothing  antialiased
-  background              #fff
 
   #kdmaincontainer.blur
     vendor                filter, blur(5px)
+
+  #main-panel-wrapper
+    background            #f0f0f0
 
   .login-form.register
     margin                0 auto 50px auto
